// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  className="card"
>
  <h3>
    Pikachu
  </h3>
  <img
    alt="pokemon"
    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png"
  />
  <p>
    Type: 
    electric
  </p>
  <p>
    Experience: 
    112
  </p>
</div>
`;

exports[`matches snapshot 2`] = `
<div
  className="card"
>
  <h3>
    Charmander
  </h3>
  <img
    alt="pokemon"
    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/4.png"
  />
  <p>
    Type: 
    fire
  </p>
  <p>
    Experience: 
    62
  </p>
</div>
`;
